k8s-devops-boot/src/main/resources/k8s-devops-boot-mini.yaml
## minikube部署脚本（简化版）

## 命名空间

apiVersion: v1
kind: Namespace
metadata:
  name: k8s-boot-ns

---
## 服务

apiVersion: v1
kind: Service
metadata:
  name: k8s-boot-svc
  namespace: k8s-boot-ns
spec:
  selector:
    app: k8s-devops-boot #选中上面的 Deployment
  ports:
  - port: 8088 #对外8088端口
    protocol: TCP
    targetPort: 8080
  type: NodePort
  #type: ClusterIP
