k8s-devops-boot/src/main/resources/k8s-devops-boot.yaml

apiVersion: v1
kind: Service
metadata:
  name: k8s-boot
spec:
  selector:
    app: k8s-devops-boot #选中上面的 Deployment
  ports:
  - port: 8088 #对外8088端口
    targetPort: 8080


---
##Ingress
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: myingress
#  labels:
#    name: myingress
#spec:
#  IngressClass: nginx
#  rules:
#  - host: springboot.demo.com #所有的host这个域名请求 转发到上面的 Service= springboot-app
#    http:
#      paths:
#      - pathType: Prefix
#        path: "/"
#        backend:
#          service:
#            name: k8s-boot # 转发到 这个Service
#            port:
#              number: 8088
