k8s-devops-boot/src/main/resources/k8s-devops-boot-cluster.yaml
## k8s集群版部署

## 命名空间

apiVersion: v1
kind: Namespace
metadata:
  name: k8s-boot-ns

---
## 服务

apiVersion: v1
kind: Service
metadata:
  name: k8s-boot-svc
  namespace: k8s-boot-ns
spec:
  selector:
    app: k8s-devops-boot #选中上面的 Deployment
  ports:
  - port: 8088 #对外8088端口
    protocol: TCP
    targetPort: 8080
  #type: NodePort
  type: ClusterIP

---
##Ingress

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: k8s-boot-ns
  labels:
    name: nginx-ingress
spec:
  rules:
  - host: k8s.boot.com #所有的host这个域名请求 转发到上面的 Service= k8s-boot-svc
    http:
      paths:
      - path: "/"
        backend:
          serviceName: k8s-boot-svc # 转发到 这个Service
          servicePort: 8088
